Configure WebSocket URL to use Render server

--- a/BeatPad/index.html
+++ b/BeatPad/index.html
@@ -1164,7 +1164,7 @@
     // Leave undefined/null to use localhost (for local development)
     // ============================================
     // Uncomment and set your WebSocket server URL:
-    // window.WS_URL = 'wss://your-websocket-server-url.com';
+    window.WS_URL = 'wss://beatpad-websocket.onrender.com';
     
     // Configuration
     const GRID_SIZE = 7;
